[package]
name = "topology-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
futures = "0.3.30"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
